@@ -236,6 +236,16 @@ has _files_to_copy_from_build => (
     builder  => '_build_files_to_copy_from_build',
 );
 
+has _running_in_ci => (
+    is      => 'ro',
+    isa     => 'Bool',
+    default => sub {
+
+        # AGENT_ID is Azure Pipelines.
+        return $ENV{TRAVIS} || $ENV{AGENT_ID};
+    },
+);
+
 my @array_params = grep { !/^_/ } map { $_->name }
     grep {
            $_->has_type_constraint
@@ -426,9 +436,9 @@ sub _build_files_to_copy_from_build {
 }
 
 sub _github_plugins {
-    return if $ENV{TRAVIS};
-
     my $self = shift;
+
+    return if $self->_running_in_ci;
 
     return (
         [
